# Hellofresh-Menu-Analytics

./: .gitignore  1_bronze.py  EXAMPLE_USAGE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pipeline.yml  publishing.yml
.history/docs/: changelog_20260124203638.md  ingest_20260122072319.md  notes_20260124204321.md
.history/hfresh/: 0_setup_20260124191342.py  1_bronze_20260123220434.py  1_bronze_20260123220527.py  1_bronze_20260123220931.py  1_bronze_20260123220955.py  1_bronze_20260123221635.py  1_bronze_20260123221918.py  1_bronze_20260123222423.py  1_bronze_20260123223149.py  1_bronze_20260123223244.py  1_bronze_20260123223430.py  1_bronze_20260124185405.py  1_bronze_20260124185409.py  (+49 more)
archive/: debug.py  env.md
docs/: CNAME  GITHUB_SETUP.md  Ingest.md  LOCAL_DEV.md  MLflow.md  README.md  RUNBOOK.md  SQLDashboard.md  _config.yml  api.md  blueprint.md  index.html  index.md  notes.md  report.md  weekly_report_2026-02-21.md
hfresh/: 3_gold_visual.py  env.py  hfresh.md  queries.sql
notebooks/: example.ipynb  join_example.sql  tpch-example copy.ipynb  tpch-example.ipynb
notes/: GITHUB_SETUP.md  LOCAL_DEV.md  blueprint.md  bronze-pipeline-issue.md  notes.md  post.md
output/: gold_analytics.db  silver_data.db
scripts/: 1_bronze.py  2_silver.py  3_gold_analytics.py  4_weekly_report.py  6_weekly_report.py  append_db.ps1  cluster-init-install-packages.sh  databricks_job.json  embed_plotly_to_md.py  init_sqlite.py  rebuild_db.ps1  run_pipeline.sh  sqlite_utils.py
sql/: Customer Orders.dbquery.ipynb  Example 2.dbquery.ipynb
(+112 files in other folders)
