[project]
name = "hellofresh_menu_analytics"
version = "0.0.1"
description = "HelloFresh menu analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests==2.31.0",
    "pandas==2.1.3",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "pyarrow==14.0.1",
    "plotly>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel",
]

[tool.setuptools.packages.find]
exclude = ["notes*", "hfresh*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"